refactor: Refactor CloudSimMocker, TestUtility and related tests
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>